<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchEgo"
            android:layout_width="wrap_content"
            android:paddingTop="16dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/main_selector"
            app:thumbTint="@drawable/switch_selector"
            android:text="@string/ego" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/giving"
            android:layout_width="wrap_content"
            android:paddingTop="16dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/main_selector"
            app:thumbTint="@drawable/switch_selector"
            android:text="@string/giving" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/respect"
            android:layout_width="wrap_content"
            android:paddingTop="16dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/main_selector"
            app:thumbTint="@drawable/switch_selector"
            android:text="@string/respect" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/kindness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/main_selector"
            android:paddingTop="16dp"
            app:thumbTint="@drawable/switch_selector"
            android:text="@string/kindness" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/optimism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/main_selector"
            app:thumbTint="@drawable/switch_selector"
            android:paddingTop="16dp"
            android:text="@string/optimism" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/happiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/main_selector"
            app:thumbTint="@drawable/switch_selector"
            android:paddingTop="16dp"
            android:text="@string/happiness" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
